@@ -2,7 +2,7 @@ Optimizations
 -------------
 
 The html5lib tree builder doesn't use the standard tree-building API,
-which worries me.
+which worries me and has resulted in a number of bugs.
 
 markup_attr_map can be optimized since it's always a map now.
 
